plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'gmedical.etl'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }

}
configurations {
    all {
        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j2-impl'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'io.minio:minio:8.5.5'

    // https://mvnrepository.com/artifact/org.json/json
    implementation("org.json:json:20090211")

    // Spark core + SQL
    implementation 'org.apache.spark:spark-sql_2.12:3.4.1'



    // https://mvnrepository.com/artifact/org.apache.iceberg/iceberg-spark-runtime-3.4
    implementation("org.apache.iceberg:iceberg-spark-runtime-3.4_2.13:1.9.0")
    // Iceberg hỗ trợ AWS S3
    implementation "org.apache.iceberg:iceberg-aws:1.2.0"

    // AWS SDK v2 (đảm bảo có đủ các thư viện cần thiết)
    implementation 'software.amazon.awssdk:s3:2.31.50'
    implementation "software.amazon.awssdk:auth:2.31.50"
    implementation "software.amazon.awssdk:core:2.31.50"


    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.2'

    // https://mvnrepository.com/artifact/javax.xml.parsers/jaxp-api
    implementation("javax.xml.parsers:jaxp-api:1.4.5")

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.19.0")

    // Iceberg (dùng core hoặc Spark integration nếu cần)
    implementation 'org.apache.iceberg:iceberg-core:1.5.0'
    implementation 'org.apache.iceberg:iceberg-parquet:1.5.0'


    implementation 'javax.servlet:javax.servlet-api:4.0.1'



    // Chuyển đổi dữ liệu
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}


bootRun {
    jvmArgs = [
            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
    ]
}

tasks.named('test') {
    useJUnitPlatform()
}
